--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -9,9 +9,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activity.AuthActivity">
 
-    <com.facebook.login.widget.LoginButton
+    <ImageView
+        android:id="@+id/main_logo"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_centerInParent="true"
+        android:background="#3c3c3c" />
+
+    <com.facebook.login.widget.LoginButton
         android:id="@+id/auth_facebookbutton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/main_logo"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="100dp"
+        android:visibility="gone" />
 </RelativeLayout>
