--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -14,7 +14,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_centerInParent="true"
-        android:background="#3c3c3c" />
+        android:src="@drawable/title_login"/>
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/auth_facebookbutton"
