--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="21"
+                                android:layout_marginRight="5dp"
                                 android:textColor="#FFF"
                                 android:textSize="70dp"
                                 android:textStyle="bold" />
